--- a/.github/workflows/arduinoBuild.yml
+++ b/.github/workflows/arduinoBuild.yml
@@ -4,10 +4,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - name: Install libraries
+      with:
+        libraries: libraries
     - name: Build all sketches
       uses: Legion2/arduino-builder-action@v2.0.0
       with:
         board: "arduino:avr:uno"
-        libraries: libraries
         sketchDirectory: sketch
