--- a/.github/workflows/arduinoBuild.yml
+++ b/.github/workflows/arduinoBuild.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Install libraries
+      uses: Legion2/arduino-builder-action@v2.0.0
       with:
         libraries: libraries
     - name: Build all sketches
