--- a/.github/workflows/arduinoBuild.yml
+++ b/.github/workflows/arduinoBuild.yml
@@ -8,6 +8,7 @@ jobs:
       uses: Legion2/arduino-builder-action@v2.0.0
       with:
         libraries: libraries
+        sketchDirectory: sketch        
     - name: Build all sketches
       uses: Legion2/arduino-builder-action@v2.0.0
       with:
