--- a/.github/workflows/arduinoBuild.yml
+++ b/.github/workflows/arduinoBuild.yml
@@ -4,13 +4,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Install libraries
-      uses: Legion2/arduino-builder-action@v2.0.0
-      with:
-        libraries: libraries
-        sketchDirectory: sketch        
     - name: Build all sketches
       uses: Legion2/arduino-builder-action@v2.0.0
       with:
-        board: "arduino:avr:uno"
-        sketchDirectory: sketch
+        libraries: 'sketch\libraries'
+        sketchDirectory: 'sketch'        
