--- a/.github/workflows/arduinoBuild.yml
+++ b/.github/workflows/arduinoBuild.yml
@@ -1,11 +1,11 @@
-name: Build Dr. Ajectory Sketches
+name: Build Sketches
 on: push
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
     - name: Build all sketches
       uses: Legion2/arduino-builder-action@v2.0.0
       with:
-        board: "arduino:avr:uno"
+        libraries: 'sketch\libraries'
+        sketchDirectory: 'sketch'        
