Add UploadController and Input Validation

--- a/configurator/configurator/configurator.csproj
+++ b/configurator/configurator/configurator.csproj
@@ -57,6 +57,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\ConfigVariables.cs" />
+    <Compile Include="Controllers\UploadController.cs" />
     <Compile Include="Helpers\PortParser.cs" />
     <Compile Include="SettingsTab.xaml.cs">
       <DependentUpon>SettingsTab.xaml</DependentUpon>
