--- a/configurator/configurator/configurator.csproj
+++ b/configurator/configurator/configurator.csproj
@@ -60,13 +60,13 @@
     <Compile Include="Models\ConfigVariables.cs" />
     <Compile Include="Controllers\UploadController.cs" />
     <Compile Include="Helpers\PortParser.cs" />
-    <Compile Include="AboutTab.xaml.cs">
+    <Compile Include="Views\AboutTab.xaml.cs">
       <DependentUpon>AboutTab.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SettingsTab.xaml.cs">
+    <Compile Include="Views\SettingsTab.xaml.cs">
       <DependentUpon>SettingsTab.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -74,15 +74,15 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="AboutTab.xaml">
+    <Page Include="Views\AboutTab.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="SettingsTab.xaml">
+    <Page Include="Views\SettingsTab.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
